--- a/src/style.css
+++ b/src/style.css
@@ -17,11 +17,15 @@ ul {
 
 li {
   list-style: none;
-  text-transform: capitalize;
+
   color: rgb(46, 182, 182);
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
+}
+
+li::first-letter {
+  text-transform: capitalize;
 }
 .weather-app-wrapper {
   max-width: 600px;
