--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ li {
 li::first-letter {
   text-transform: capitalize;
 }
+
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -60,4 +61,12 @@ li::first-letter {
   position: relative;
   font-size: 16px;
   top: -32px;
+}
+.weather-temperature .active {
+  color: rgb(10, 175, 175);
+  cursor: default;
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
 }
