--- a/src/style.css
+++ b/src/style.css
@@ -70,3 +70,22 @@ li::first-letter {
 .weather-temperature .active:hover {
   text-decoration: none;
 }
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: rgb(83, 224, 224);
+}
+
+.weather-forecast-day {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temp-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temps {
+  font-size: 13px;
+}
